--- a/diptheria.html
+++ b/diptheria.html
@@ -91,7 +91,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <div class="disease-name">TUBERCULOSIS</div>
+            <div class="disease-name">DIPTHERIA</div>
             <div class="symptoms-prevention">
                 <p><strong>Symptoms:</strong></p>
                 <ul>
